--- a/HotelBooking/src/main/webapp/mycss.css
+++ b/HotelBooking/src/main/webapp/mycss.css
@@ -302,7 +302,7 @@ input[type=submit].chosed{
 .BookingBox{
 	border: 2px solid #ffffff;
 	background-color: #ffffff;
-	width: 500px;
+	width: 80%;
 	height: 300px;
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 	
